fixed some alignments

--- a/src/Dashboard/Responsive.module.css
+++ b/src/Dashboard/Responsive.module.css
@@ -20,7 +20,7 @@
 @media (min-width: 992px) {
   .cardContainer {
     margin-top: -40rem;
-    width: 71rem;
+    width: 68rem;
     margin-left: -7rem;
   }
 }
